--- a/src/components/RangeComponent/RangeComponent.less
+++ b/src/components/RangeComponent/RangeComponent.less
@@ -5,23 +5,23 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	margin: 40px calc(16px / 2);
+	margin: 40px calc(20px / 2);
 	padding-top: 1.6rem;
 	width: 40vw;
-	height: calc(16px + 1.6rem);
+	height: calc(20px + 1.6rem);
 }
 
 .input-wrapper {
-	width: calc(100% + 16px);
-	margin: 0 calc(16px / -2);
+	width: calc(100% + 20px);
+	margin: 0 calc(20px / -2);
 	position: absolute;
-	height: 16px;
+	height: 20px;
 }
 
 .control-wrapper {
 	width: 100%;
 	position: absolute;
-	height: 16px;
+	height: 20px;
 }
 
 .input {
@@ -61,8 +61,8 @@
 	&::-ms-thumb {
 		appearance: none;
 		pointer-events: all;
-		width: 16px;
-		height: 16px;
+		width: 20px;
+		height: 20px;
 		border-radius: 0px;
 		border: 0 none;
 		cursor: grab;
@@ -77,8 +77,8 @@
 		-moz-appearance: none;
 		appearance: none;
 		pointer-events: all;
-		width: 16px;
-		height: 16px;
+		width: 20px;
+		height: 20px;
 		border-radius: 0px;
 		border: 0 none;
 		cursor: grab;
@@ -93,8 +93,8 @@
 		-webkit-appearance: none;
 		appearance: none;
 		pointer-events: all;
-		width: 16px;
-		height: 16px;
+		width: 20px;
+		height: 20px;
 		border-radius: 0px;
 		border: 0 none;
 		cursor: -webkit-grab;
@@ -116,8 +116,8 @@
 	height: 6px;
 	border-radius: 3px;
 	background: lightgrey;
-	-webkit-filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
-	filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
+	-webkit-filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
+	filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
 }
 
 .inner-rail {
@@ -125,8 +125,8 @@
 	height: 100%;
 	background: hotpink;
 	opacity: 0.5;
-	-webkit-filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
-	filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
+	-webkit-filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
+	filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
 }
 
 .control {
@@ -136,16 +136,17 @@
 	position: absolute;
 	background: hotpink;
 	top: 50%;
-	margin-left: calc(16px / -2);
-	transform: translate3d(0, -50%, 0);
+	margin-left: calc(20px / -2);
+	transform: translate(0, -50%);
 	z-index: 2;
-	-webkit-filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
-	filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, 0.7));
+	-webkit-filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
+	filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, 0.7));
+	border: 2px solid aliceblue;
 }
 
 .control span {
 	position: absolute;
-	top: 25px;
+	top: 30px;
 	left: 5px;
 	font-weight: lighter;
 }
